--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Responsive web design</title>
 </head>
 <body>
-  <p> CGN x FAV</p>
+  <p> CGN x FAV ME </p>
   <img src="images/fav.jpg">
 </body>
 </html>
